--- a/README.org
+++ b/README.org
@@ -1,2 +1,2 @@
-* Physics-JS
+* physics-js
 A project I'm doing to test out JavaScript. In the end I hope to have bouncing balls inside of an HTML canvas.
